--- a/src/Payment.css
+++ b/src/Payment.css
@@ -26,3 +26,24 @@
 .payment__details {
   flex: 0.8;
 }
+
+.payment__details > form {
+  max-width: 400px;
+}
+
+.payment__details > h3 {
+  padding-bottom: 20px;
+}
+
+.payment__details > form > div > button {
+  background-color: #f0c14b;
+  border-radius: 2px;
+  width: 100%;
+  height: 30px;
+  border: 1px solid;
+  font-weight: bolder;
+  margin-top: 10px;
+  border-color: #a99734 #9c7e31 #846a29;
+  cursor: pointer;
+  color: #111;
+}
