--- a/src/Product.css
+++ b/src/Product.css
@@ -10,6 +10,11 @@
   min-width: 100px;
   background-color: white;
   z-index: 1;
+  transition: box-shadow 0.3s;
+}
+
+.product:hover {
+  box-shadow: 0 0 20px rgba(33, 33, 33, 0.2);
 }
 
 .product__rating {
